Feat: Make codeql build frontend

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -46,7 +46,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Change to frontend directory
       run: cd frontend
     # Initializes the CodeQL tools for scanning.
@@ -73,9 +73,10 @@ jobs:
     #   If the Autobuild fails above, remove it and uncomment the following three lines.
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
-    # - run: |
-    #     echo "Run, Build Application using script"
-    #     ./location_of_script_within_repo/buildscript.sh
+    - run: |
+        echo "Run, Build Application using script"
+        npm install
+        npm run dev
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
