--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,12 +26,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: cd frontend
-      working-directory: frontend
     - run: npm ci
-      working-directory: frontend
+      working-directory: ./frontend
     - run: npm run build --if-present
-      working-directory: frontend
+      working-directory: ./frontend
     - run: npm test
-      working-directory: frontend
+      working-directory: ./frontend
 
