--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - run: npm install
+      working-directory: ./frontend
     - run: npm ci
       working-directory: ./frontend
     - run: npm run build --if-present
