--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@preact/signals-react": "^1.3.6",
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
