--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,14 @@ Django==5.0.1
 django-cors-headers==4.3.1
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 idna==3.6
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.3
 openapi-codec==1.3.2
+packaging==23.2
 pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
