--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@fremtind/jkl-icon-button-react": "^4.0.33",
+    "@fremtind/jkl-icons-react": "^8.7.2",
+    "@fremtind/jkl-text-input-react": "^15.1.2",
+    "@fremtind/jkl-tooltip-react": "^4.2.21",
     "@preact/signals-react": "^1.3.6",
     "axios": "^1.6.3",
     "react": "^18.2.0",
