--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@fremtind/jkl-tooltip-react": "^4.2.21",
     "@preact/signals-react": "^1.3.6",
     "axios": "^1.6.3",
+    "noisejs": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
