--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "noisejs": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
