--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,17 @@
     "test:e2e": "cypress run"
   },
   "dependencies": {
+    "@chakra-ui/alert": "^2.2.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fremtind/jkl-icon-button-react": "^4.0.33",
     "@fremtind/jkl-icons-react": "^8.7.2",
     "@fremtind/jkl-text-input-react": "^15.1.2",
     "@fremtind/jkl-tooltip-react": "^4.2.21",
     "@preact/signals-react": "^1.3.6",
     "axios": "^1.6.3",
+    "framer-motion": "^11.5.4",
     "galacticpathfinder": "file:",
     "noisejs": "^2.1.0",
     "react": "^18.2.0",
