--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,37 @@ jobs:
           docker compose up -d
           docker compose run backend python manage.py test
           docker compose down
+
+  cypress-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Navigate to frontend folder
+        working-directory: frontend
+        run: |
+          npm install
+
+      # Cache npm dependencies to speed up subsequent builds
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-npm-cache
+          restore-keys: |
+            ${{ runner.os }}-npm-cache
+
+      # Install npm dependencies and run Cypress tests
+      - name: Build and start frontend
+        working-directory: frontend
+        run: |
+          npm run build
+          npm start &
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          working-directory: frontend
+          build: npm run build
+          start: npm start
