--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
           docker compose up -d
           docker compose run backend python manage.py test
           docker compose down
+          - name: Checkout
+          uses: actions/checkout@v4
 
   cypress-run:
     runs-on: ubuntu-latest
@@ -31,7 +33,6 @@ jobs:
         run: |
           npm install
 
-      # Cache npm dependencies to speed up subsequent builds
       - name: Cache npm dependencies
         uses: actions/cache@v3
         with:
@@ -40,16 +41,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-cache
 
-      # Install npm dependencies and run Cypress tests
-      - name: Build and start frontend
+      - name: Build
         working-directory: frontend
         run: |
           npm run build
-          npm start &
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
           working-directory: frontend
-          build: npm run build
-          start: npm start
+          start: npm run preview -- --port 8080
