--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,35 +19,58 @@ jobs:
           docker compose up -d
           docker compose run backend python manage.py test
           docker compose down
-          - name: Checkout
-          uses: actions/checkout@v4
 
-  cypress-run:
+  frontend-build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install
+      working-directory: ./frontend
+    - run: npm run build --if-present
+      working-directory: ./frontend
+    - run: npm test
+      working-directory: ./frontend
+
+  e2e:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Navigate to frontend folder
-        working-directory: frontend
-        run: |
-          npm install
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: frontend/node_modules
-          key: ${{ runner.os }}-npm-cache
-          restore-keys: |
-            ${{ runner.os }}-npm-cache
-
-      - name: Build
-        working-directory: frontend
-        run: |
-          npm run build
-
+        # Install npm dependencies, cache them correctly
+        # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          working-directory: frontend
-          start: npm run preview -- --port 8080
+          working-directory: ./frontend
+          browser: chrome
+  
+  dependabot:
+    permissions:
+      pull-requests: write
+      contents: write
+              
+    name: 'Dependabot'
+    # After the other jobs complete, if one of them fails, it won't merge the PR.
+    needs: [build, frontend-build, e2e] 
+    runs-on: ubuntu-latest
+    # Detect that the PR author is dependabot
+    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}} 
+    steps:
+      - name: Enable auto-merge for Dependabot PRs
+        # Use Github CLI to merge automatically the PR
+        run: gh pr merge --auto --merge "$PR_URL" 
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
