--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
+        cache-dependency-path: './frontend/package-lock.json'
+    - run: npm ci
       working-directory: ./frontend
     - run: npm run build --if-present
       working-directory: ./frontend
