--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v4
@@ -48,10 +48,10 @@ jobs:
         uses: actions/checkout@v4
       
       # Set up Node.js
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
           cache-dependency-path: './frontend/package-lock.json'
       
@@ -62,12 +62,8 @@ jobs:
 
       # Start the frontend server
       - name: Start server
-        run: npm start &
+        run: npm run build && npm run preview &
         working-directory: ./frontend
-
-      # Wait for the server to be available
-      - name: Wait for server to be ready
-        run: npx wait-on http://localhost:3000
 
       # Run Cypress tests
       - name: Cypress run
@@ -75,6 +71,7 @@ jobs:
         with:
           working-directory: ./frontend
           browser: chrome
+          wait-on: 'http://localhost:5174'
   
   dependabot:
     permissions:
