Refactor animation service to handle path and nodeOrder as Node arrays
- Updated animationService to directly assign path and nodeOrder from response without JSON parsing.
- Modified PostTraversalResponse interface to reflect path and nodeOrder as Node arrays instead of strings.

Add GitHub Actions workflow for backend CI

- Created backend continuous integration workflow to run tests and manage dependencies.
- Added steps for setting up Python, installing dependencies, running tests, and deploying documentation to GitHub Pages.
- Included a job for Dependabot to enable auto-merge for its pull requests.

Add pre-commit configuration for code quality checks

- Introduced a pre-commit configuration file to enforce coding standards and run various checks on commits.
- Configured hooks for Python type checking, formatting, and validation of markdown and JSON files.

--- a/fast-api/pyproject.toml
+++ b/fast-api/pyproject.toml
@@ -1,9 +1,35 @@
 [project]
-name = "fast-api"
+name = "Server"
 version = "0.1.0"
-description = "Add your description here"
+description = "A server for GalacticPathFinder, a pathfinding service using FastAPI."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.116.1",
 ]
+
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+]
+
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-api-autonav>=0.3.0",
+    "mkdocs-autoapi>=0.4.1",
+    "mkdocs-awesome-nav>=3.1.2",
+    "mkdocs-material>=9.6.16",
+    "mkdocstrings>=0.30.0",
+    "mkdocstrings-python>=1.16.12",
+]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "$version"
+version_scheme = "pep440"
+version_provider = "uv"
+update_changelog_on_bump = true
+major_version_zero = true
