--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   build:
@@ -17,7 +17,6 @@ jobs:
         run: |
           docker compose build
           docker compose up -d
-          docker compose run backend python manage.py test
           docker compose down
 
   frontend-build:
@@ -32,8 +31,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: './frontend/package-lock.json'
+          cache: "npm"
+          cache-dependency-path: "./frontend/package-lock.json"
       - run: npm ci
         working-directory: ./frontend
       - run: npm run build --if-present
@@ -73,7 +72,7 @@ jobs:
       pull-requests: write
       contents: write
 
-    name: 'Dependabot'
+    name: "Dependabot"
     # After the other jobs complete, if one of them fails, it won't merge the PR.
     needs: [build, frontend-build]
     runs-on: ubuntu-latest
