--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -32,7 +32,7 @@ jobs:
           enable-cache: true
 
       - name: Change directory
-        run: cd fast-api
+        run: cd backend
 
       - name: Run pre-commit hooks (optional)
         run: |
