feat: add backend CI workflow and initial test for graph traversal methods

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: ["main"]
 
+permissions:
+  pull-requests: write
+  contents: write
+
+env:
+  PYTHON_VERSION: "3.12"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,6 +46,73 @@ jobs:
         working-directory: ./frontend
       - run: npm test
         working-directory: ./frontend
+
+  backend-build-and-test:
+    name: continuous-integration
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
+
+      - name: Run pre-commit hooks (optional)
+        run: |
+          cd backend
+          uv pip install --system pre-commit
+          pre-commit run --all-files || true
+        continue-on-error: true
+
+      - name: Install and sync dependencies
+        run: |
+          cd backend
+          uv sync --locked --all-extras
+
+      - name: Run root tests
+        run: |
+          cd backend
+          uv run pytest --doctest-modules --cov=src --cov-report=html
+
+  deploy-backend-docs:
+    name: Deploy to GitHub Pages
+    needs: [backend-build-and-test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
+      - name: Install and sync dependencies
+        run: |
+          cd backend
+          uv sync --group=docs --locked
+
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - run: |
+          cd backend
+          uv run mkdocs gh-deploy --force
 
   upload-docker-images:
     runs-on: ubuntu-latest
