cd: update workflow name in CD pipeline to match CI configuration

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CD Pipeline
 
 on:
   workflow_run:
-    workflows: ["Backend Continuous Integration"]
+    workflows: ["CI"]
     types:
       - completed
   workflow_dispatch: {}
