--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: true
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       - name: Build docker image and run tests
         run: |
           docker compose build
@@ -134,12 +134,13 @@ jobs:
         run: echo "GIT_SHA=$(git rev-parse --short $GITHUB_SHA)" >> $GITHUB_ENV
       - name: Build and Push Docker Backend Image
         run: |
-          docker build -t ghcr.io/spiderpig02/galacticpathfinder-backend:${{ env.GIT_SHA }} ./backend
-          docker push ghcr.io/spiderpig02/galacticpathfinder-backend:${{ env.GIT_SHA }}
+          docker build -t ghcr.io/spiderpig02/galacticpathfinder-backend:$GIT_SHA ./backend
+          docker push ghcr.io/spiderpig02/galacticpathfinder-backend:$GIT_SHA
+
       - name: Build and Push Docker Webapp Image
         run: |
-          docker build -t ghcr.io/spiderpig02/galacticpathfinder-frontend:${{ env.GIT_SHA }} ./frontend
-          docker push ghcr.io/spiderpig02/galacticpathfinder-frontend:${{ env.GIT_SHA }}
+          docker build -t ghcr.io/spiderpig02/galacticpathfinder-frontend:$GIT_SHA ./frontend
+          docker push ghcr.io/spiderpig02/galacticpathfinder-frontend:$GIT_SHA
 
   dependabot:
     permissions:
