--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract short SHA
         id: git_sha
-        run: echo "GIT_SHA=$(git rev-parse --short $GITHUB_SHA)" >> $GITHUB_ENV
+        run: echo "GIT_SHA=$(git rev-parse --short ${GITHUB_SHA})" >> $GITHUB_ENV
       - name: Build and Push Docker Backend Image
         run: |
           docker build -t ghcr.io/spiderpig02/galacticpathfinder-backend:$GIT_SHA ./backend
